docs: add branch workflow guide and pre-commit guard hook
- README: document the Java 8 / Java 21 dual-track branching strategy,
  cherry-pick workflow, and hook setup instructions
- .githooks/pre-commit: warns developers committing to palladium_upgrade
  when they change non-build files, prompts for confirmation, aborts if
  the change should have gone to master first

Run `git config core.hooksPath .githooks` once after cloning to activate.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>